--- a/Tracer/MainApp.csproj
+++ b/Tracer/MainApp.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TracerLib\TracerLib.csproj" />
+  </ItemGroup>
+
 </Project>
