--- a/Tracer/MainApp.csproj
+++ b/Tracer/MainApp.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\TracerLib\TracerLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Files\" />
+  </ItemGroup>
+  
 </Project>
