--- a/TracerLib.Tests/TracerTests.csproj
+++ b/TracerLib.Tests/TracerTests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{AF65D1F9-53B7-4AEE-9699-D69C5101C813}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TracerLib.Tests</RootNamespace>
-    <AssemblyName>TracerLib.Tests</AssemblyName>
+    <RootNamespace>TracerTests</RootNamespace>
+    <AssemblyName>TracerTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -38,6 +38,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.2.1.1\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
@@ -49,16 +52,16 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TraceLibTests.cs" />
+    <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TracerLib\TracerLib.csproj">
-      <Project>{93e09d4e-dbf9-4082-a897-601713e13c01}</Project>
-      <Name>TracerLib</Name>
+    <ProjectReference Include="..\TracerLib\Tracer.csproj">
+      <Project>{93E09D4E-DBF9-4082-A897-601713E13C01}</Project>
+      <Name>Tracer</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
